# swiss-company-predictor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: feature_backfill.py  feature_daily_sync.py  training_pipeline.py
docker/airflow/: Dockerfile
docker/mlflow/: Dockerfile  entrypoint.sh
docker/streamlit/: Dockerfile
pgadmin/: servers.json
references/: delta_scraping.ipynb  inital_scraping.ipynb
sql/init/: 00_create_databases.sh  01_schemas.sql  02_raw_tables.sql  03_features_tables.sql  04_predictions_tables.sql
src/common/: config.py  db.py  http.py  logging.py
src/features/: aggregation.py  feature_builder.py
src/inference/: predict.py
src/scraper/: hr_scraper.py  pipeline.py  sogc_client.py  uid_format.py  zefix_client.py
src/training/: baseline.py  split.py  train.py
streamlit_app/: app.py
tests/: conftest.py  test_common_config.py  test_common_db.py  test_common_logging.py  test_features.py  test_hr_scraper.py  test_pipeline.py  test_predict.py  test_sogc_client.py  test_split.py  test_training.py  test_uid_format.py  test_zefix_client.py
tests/fixtures/: hr_auszug_ajax.html  hr_auszug_page.html  short_zefix_export.csv  sogc_bydate_response.json  weekly_sample.csv  zefix_detail_response.json  zefix_search_response.json
