[project]
name = "swiss-company-predictor"
version = "0.1.0"
description = "MLOps pipeline: weekly company registration forecasts for Canton Lucerne"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
scraper = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pandas>=2.2",
    "numpy>=2.0",
]
features = [
    "pandas>=2.2",
    "numpy>=2.0",
]
training = [
    "xgboost>=2.1",
    "mlflow>=2.17",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
]
streamlit-app = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "mlflow>=2.17",
    "pandas>=2.2",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = [
    "src/scraper",
    "src/features",
    "src/training",
    "src/inference",
    "src/common",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/inference/predict.py" = ["N806"]
"src/training/train.py" = ["N806"]
"streamlit_app/app.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["dags.*", "tests.*", "streamlit_app.*"]
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "mlflow.*",
    "airflow.*",
    "sklearn.*",
    "bs4.*",
    "responses.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
